--- a/config/train/default.yaml
+++ b/config/train/default.yaml
@@ -6,7 +6,7 @@ weight_decay: 1e-4
 mixup_alpha: 0.2
 patience: 10
 t0_factor: 5            # CosineAnnealingWarmRestarts の T_0 係数
-device: gpu
+device: cuda
 
 # Early stopping & 出力
 metric_name: val_loss
