--- a/config/train/default.yaml
+++ b/config/train/default.yaml
@@ -7,6 +7,9 @@ mixup_alpha: 0.2
 patience: 10
 t0_factor: 5            # CosineAnnealingWarmRestarts の T_0 係数
 device: cuda
+dense_drop: 0.2
+conv_drop: 0.2
+noise_std: 0.09
 
 # Early stopping & 出力
 metric_name: val_loss
