--- a/imu/config/config.yaml
+++ b/imu/config/config.yaml
@@ -10,8 +10,8 @@ data:
   max_seq_len: null          # pad_percentile から自動決定
   pad_percentile: 95
   pad_value: 0.0
-  truncate_mode_train: random  # 長い系列は先頭から切る
-  truncate_mode_val: head
+  truncate_mode_train: tail  # 長い系列は先頭から切る
+  truncate_mode_val: tail
 
 train:
   batch_size: 64
@@ -67,51 +67,51 @@ head:
   hidden: 512
   dropout: 0.5
 
-aug:
-  no_aug: true
+# aug:
+#   no_aug: true
 
-  # 時間方向
-  p_time_shift: 0.7
-  max_shift_ratio: 0.1
-  p_time_warp: 0.5
-  warp_min: 0.9
-  warp_max: 1.1
-  p_block_dropout: 0.5
-  n_blocks: [1, 2]
-  block_len: [2, 5]
+#   # 時間方向
+#   p_time_shift: 0.0
+#   max_shift_ratio: 0.1
+#   p_time_warp: 0.5
+#   warp_min: 0.9
+#   warp_max: 1.1
+#   p_block_dropout: 0.5
+#   n_blocks: [1, 2]
+#   block_len: [2, 5]
 
-  # IMU系
-  p_imu_jitter: 0.9
-  imu_sigma: 0.03
-  p_imu_scale: 0.5
-  imu_scale_sigma: 0.03
-  p_imu_drift: 0.5
-  drift_std: 0.003
-  drift_clip: 0.25
-  p_imu_small_rot: 0.0   # 使うなら 0.2 など
-  rot_deg: 5.0
+#   # IMU系
+#   p_imu_jitter: 0.9
+#   imu_sigma: 0.03
+#   p_imu_scale: 0.5
+#   imu_scale_sigma: 0.03
+#   p_imu_drift: 0.5
+#   drift_std: 0.003
+#   drift_clip: 0.25
+#   p_imu_small_rot: 0.0   # 使うなら 0.2 など
+#   rot_deg: 5.0
 
-  pad_value: 0.0
+#   pad_value: 0.0
 
 
 # ---- 拡張を完全OFFにしたい場合の例（IMU-only版） ----
-# aug:
-#   no_aug: false
-#   p_time_shift: 0.0
-#   max_shift_ratio: 0.0
-#   p_time_warp: 0.0
-#   warp_min: 1.0
-#   warp_max: 1.0
-#   p_block_dropout: 0.0
-#   n_blocks: [0, 0]
-#   block_len: [0, 0]
-#   p_imu_jitter: 0.0
-#   imu_sigma: 0.0
-#   p_imu_scale: 0.0
-#   imu_scale_sigma: 0.0
-#   p_imu_drift: 0.0
-#   drift_std: 0.0
-#   drift_clip: 0.0
-#   p_imu_small_rot: 0.0
-#   rot_deg: 0.0
-#   pad_value: 0.0
+aug:
+  no_aug: false
+  p_time_shift: 0.5
+  max_shift_ratio: 0.2
+  p_time_warp: 0.0
+  warp_min: 1.0
+  warp_max: 1.0
+  p_block_dropout: 0.0
+  n_blocks: [0, 0]
+  block_len: [0, 0]
+  p_imu_jitter: 0.0
+  imu_sigma: 0.0
+  p_imu_scale: 0.0
+  imu_scale_sigma: 0.0
+  p_imu_drift: 0.0
+  drift_std: 0.0
+  drift_clip: 0.0
+  p_imu_small_rot: 0.0
+  rot_deg: 0.0
+  pad_value: 0.0
