--- a/imu_mask/config/imu_mask.yaml
+++ b/imu_mask/config/imu_mask.yaml
@@ -22,7 +22,7 @@ train:
   dense_drop: 0.2
   conv_drop: 0.2
   noise_std: 0.09
-  mode: 8_class
+  mode: 18_class
 
   # Early stopping & 出力
   metric_name: val_loss
@@ -30,57 +30,56 @@ train:
 model:
   model:
     name: lstmgru
-    num_classes: null
+    num_classes: 18
     num_channels: 15
-
   meta:
     proj_dim: 32
-    dropout: 0.20
-
+    dropout: 0.2
   cnn:
     multiscale:
-      out_per_kernel: 12        # 12 × len([3,5,7]) = 36ch をコード側で算出
-      kernel_sizes: [3, 5, 7]
+      out_per_kernel: 12
+      kernel_sizes:
+      - 3
+      - 5
+      - 7
     se:
-      out_channels: 48          # 各チャンネル枝の最終出力チャネル
-      drop: 0.30
-      
-    pool_sizes: [2, 2]        # MaxPool1d を2回通す想定 → L_out ≈ floor(L/4)
-
+      out_channels: 48
+      drop: 0.3
+    pool_sizes:
+    - 2
+    - 2
   rnn:
     hidden_size: 128
     num_layers: 2
-    dropout: 0.20
+    dropout: 0.2
     bidirectional: true
-
   noise:
     std: 0.09
-
   head:
     hidden: 512
-    dropout: 0.50
+    dropout: 0.5
 
 aug:
   no_aug: false
-  p_time_shift: 0.5
-  max_shift_ratio: 0.2
+  p_time_shift: 0.75
+  max_shift_ratio: 0.21
   p_time_warp: 0.0
-  warp_min: 0.9
-  warp_max: 1.1
-  p_block_dropout: 0.0
+  warp_min: 0.90
+  warp_max: 1.10
+  p_block_dropout: 0.16
   n_blocks:
-  - 1
   - 2
-  block_len:
   - 2
+  block_len: 
   - 5
-  p_imu_jitter: 0.0
-  imu_sigma: 0.0
-  p_imu_scale: 0.0
-  imu_scale_sigma: 0.0
-  p_imu_drift: 0.0
-  drift_std: 0.003
-  drift_clip: 0.25
-  p_imu_small_rot: 0.0
-  rot_deg: 5.0
+  - 7
+  p_imu_jitter: 0.26
+  imu_sigma: 0.02
+  p_imu_scale: 0.35
+  imu_scale_sigma: 0.08
+  p_imu_drift: 0.19
+  drift_std: 0.001
+  drift_clip: 0.43
+  p_imu_small_rot: 0.33
+  rot_deg: 5.5
   pad_value: 0.0
